--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
 
 <meta property="og:type" content="website">
-<meta property="og:title" content="xjswift的博客">
+<meta property="og:title" content="xjbrains的博客">
 <meta property="og:url" content="http://yoursite.com/index.html">
-<meta property="og:site_name" content="xjswift的博客">
+<meta property="og:site_name" content="xjbrains的博客">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="xjswift的博客">
+<meta name="twitter:title" content="xjbrains的博客">
 
 <link rel="apple-touch-icon" href= "/apple-touch-icon.png">
 
 
-    <link rel="alternate" href="/atom.xml" title="xjswift的博客" type="application/atom+xml">
+    <link rel="alternate" href="/atom.xml" title="xjbrains的博客" type="application/atom+xml">
 
 
 
@@ -57,7 +57,7 @@
 <link href="//cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
 
-<title>xjswift的博客</title>
+<title>xjbrains的博客</title>
 
 <script src="//cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/clipboard.js/1.5.10/clipboard.min.js"></script>
